# opengl-experiments

src/: CMakeLists.txt  main.cpp
src/cmake/: FindGLFW3.cmake
